# destill

./: .gitignore  ARCHITECTURE.md  BUILD.bazel  JUNIT_TESTING.md  LICENSE  Makefile  QUICK_START_AGENTIC.md  QUICK_START_DISTRIBUTED.md  README.md  README_REFACTOR.md  TESTING_AGENTIC_MODE.md  TESTING_DISTRIBUTED_MODE.md  WORKSPACE  go.mod  go.sum  rp_packages.txt
demos/: tui_demo.go
docker/: MONITORING_CONNECT.md  README.md  connect.yaml  docker-compose.yml  init-db.sql
docs/: GITHUB_ACTIONS.md  MCP_INTEGRATION.md
docs/plans/: 2025-12-14-freemium-model-design.md  2025-12-14-freemium-phase1.md  2025-12-16-hybrid-response-compression-design.md  2025-12-16-hybrid-response-compression-impl.md
project_notes/: 2025-11-28-original-architecture.md  2025-11-28.md  2025-12-09-agentic-refactor-plan.md  2025-12-10-remove-legacy-pipeline.md
src/analyze/: agent.go  agent_test.go  analyzer.go  analyzer_test.go
src/broker/: BUILD.bazel  adapter.go  broker.go  broker_test.go  inmemory.go  inmemory_test.go  redpanda.go
src/buildkite/: client.go  client_test.go  provider.go  provider_test.go
src/cmd/analysis/: BUILD.bazel  agent.go  agent_test.go  main.go
src/cmd/analyze-agent/: main.go
src/cmd/cli/: BUILD.bazel  analyze_helpers.go  analyze_helpers_test.go  local_mode.go  local_mode_test.go  main.go
src/cmd/destill-cli/: main.go
src/cmd/ingest-agent/: main.go
src/cmd/ingestion/: BUILD.bazel  agent.go  agent_test.go  main.go
src/config/: config.go  config_test.go
src/contracts/: BUILD.bazel  broker.go  messages.go
src/githubactions/: client.go  client_test.go  provider.go  provider_test.go  types.go
src/ingest/: agent.go  agent_test.go  chunker.go  chunker_test.go
src/junit/: parser.go  parser_test.go
src/logger/: BUILD.bazel  logger.go
src/mcp/: compress.go  compress_test.go  server.go  store.go  store_test.go  tiering.go  tiering_test.go  tools.go  types.go
src/patterns/: normalize.go  normalize_test.go
src/pipeline/: BUILD.bazel  agentic.go  integration_test.go  legacy.go  pipeline.go  pipeline_test.go
src/provider/: errors.go  errors_test.go  interface.go  interface_test.go  types.go
src/ranking/: ranking.go  ranking_test.go
src/sanitize/: sanitize.go  sanitize_test.go
src/store/: inmemory.go  inmemory_test.go  memory.go  memory_test.go  postgres.go  store.go
src/tui/: delegate.go  detail_overflow_test.go  detail_panel.go  header.go  item.go  layout.go  list_panel.go  progress.go  progress_test.go  search.go  styles.go  text_utils.go  text_utils_test.go  triage.go  triage_long_lines_test.go  triage_test.go  view.go
tests/integration/: buildkite_test.go  github_actions_test.go
(+3 files in other folders)
