load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "broker",
    srcs = ["inmemory.go"],
    importpath = "destill-agent/src/broker",
    visibility = ["//visibility:public"],
)

go_test(
    name = "broker_test",
    srcs = ["inmemory_test.go"],
    embed = [":broker"],
)
