load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "analysis_lib",
    srcs = ["main.go"],
    importpath = "destill-agent/src/cmd/analysis",
    visibility = ["//visibility:private"],
    deps = [
        "//src/broker",
        "//src/contracts",
    ],
)

go_binary(
    name = "analysis",
    embed = [":analysis_lib"],
    visibility = ["//visibility:public"],
)
