load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cli_lib",
    srcs = ["main.go"],
    importpath = "destill-agent/src/cmd/cli",
    visibility = ["//visibility:private"],
    deps = [
        "//src/broker",
        "//src/contracts",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "cli",
    embed = [":cli_lib"],
    visibility = ["//visibility:public"],
)
